force-app/main/default/objects/Account/fields/Nama_Direktur_Utama__c.field-meta.xml
<CustomField>
    <fullName>Nama_Direktur_Utama__c</fullName>
    <label>Nama Direktur Utama / Pemegang Kuasa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>