force-app/main/default/objects/Account/fields/Negara_Asal__c.field-meta.xml
<CustomField>
    <fullName>Negara_Asal__c</fullName>
    <label>Negara Asal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>