force-app/main/default/objects/Account/fields/NIB__c.field-meta.xml
<CustomField>
    <fullName>NIB__c</fullName>
    <label>NIB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>