force-app/main/default/objects/Account/fields/Office_Phone_Area__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone_Area__c</fullName>
    <label>Office Phone Area</label>
    <type>Phone</type>
</CustomField>