force-app/main/default/objects/Account/fields/Other_Emails__c.field-meta.xml
<CustomField>
    <fullName>Other_Emails__c</fullName>
    <label>Other Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>