force-app/main/default/objects/Account/fields/Pefindo_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Process_ID__c</fullName>
    <label>Pefindo Process ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>