force-app/main/default/objects/Account/fields/Pefindo_Risk_Score_Category__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Risk_Score_Category__c</fullName>
    <label>Pefindo Risk Score Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>