force-app/main/default/objects/Account/fields/Pefindo_Score__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Score__c</fullName>
    <label>Pefindo Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>