force-app/main/default/objects/Account/fields/Pefindo_Spouse_Process_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Spouse_Process_Entity_ID__c</fullName>
    <label>Pefindo Spouse Process Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>