force-app/main/default/objects/Account/fields/Pefindo_Spouse_Result_Check__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Spouse_Result_Check__c</fullName>
    <label>Pefindo Spouse Result Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>