force-app/main/default/objects/Account/fields/Pefindo_Spouse_Submission_Error__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Spouse_Submission_Error__c</fullName>
    <label>Pefindo Spouse Submission Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>