force-app/main/default/objects/Account/fields/Pefindo_Total_OSP__c.field-meta.xml
<CustomField>
    <fullName>Pefindo_Total_OSP__c</fullName>
    <label>Pefindo Total OSP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>