force-app/main/default/objects/Account/fields/PhoneF__c.field-meta.xml
<CustomField>
    <fullName>PhoneF__c</fullName>
    <formula>Phone_Area__pc + Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>