force-app/main/default/objects/Account/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picture URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>