force-app/main/default/objects/Account/fields/PPN__c.field-meta.xml
<CustomField>
    <fullName>PPN__c</fullName>
    <label>PPN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>