force-app/main/default/objects/Account/fields/Provinsi__c.field-meta.xml
<CustomField>
    <fullName>Provinsi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provinsi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>