force-app/main/default/objects/Account/fields/Purpose_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Insurance__c</fullName>
    <label>Purpose of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Untuk melindungi aset dari kejadian tidak terduga</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Untuk mitigasi atas potensi kerugian usaha</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Guna memenuhi syarat di perjanjian</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Lainnya</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>