force-app/main/default/objects/Account/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>87</fullName>
                <label>JCC</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>Tengah</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>Jakarta</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>Barat</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>Timur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>