force-app/main/default/objects/Account/fields/Rekanan__c.field-meta.xml
<CustomField>
    <fullName>Rekanan__c</fullName>
    <label>Rekanan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>