force-app/main/default/objects/Account/fields/SCC_Address__c.field-meta.xml
<CustomField>
    <fullName>SCC_Address__c</fullName>
    <description>This address will hold Value is concatenated from all of the API Fields, concatenated by alamatId1,alamatId2,alamatId3,alamatId4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>