force-app/main/default/objects/Account/fields/SCC_cifno__c.field-meta.xml
<CustomField>
    <fullName>SCC_cifno__c</fullName>
    <description>Is the Customer’s Information Number (CIF) used by BRI.</description>
    <externalId>true</externalId>
    <label>Customer CIF</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>