force-app/main/default/objects/Account/fields/SCC_Facebook__c.field-meta.xml
<CustomField>
    <fullName>SCC_Facebook__c</fullName>
    <label>Facebook</label>
    <length>50</length>
    <type>Text</type>
</CustomField>