force-app/main/default/objects/Account/fields/SCC_Instagram__c.field-meta.xml
<CustomField>
    <fullName>SCC_Instagram__c</fullName>
    <label>Instagram</label>
    <length>50</length>
    <type>Text</type>
</CustomField>