force-app/main/default/objects/Account/fields/SCC_Jenis_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jenis_Nasabah__c</fullName>
    <description>Is the Customer Type Detail (Priority / Not).</description>
    <label>Jenis Nasabah</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prioritas</fullName>
            </value>
            <value>
                <fullName>Non-Prioritas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>