force-app/main/default/objects/Account/fields/SCC_Nama_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>SCC_Nama_Nasabah__c</fullName>
    <label>Nama Nasabah</label>
    <length>50</length>
    <type>Text</type>
</CustomField>