force-app/main/default/objects/Account/fields/SCC_NIK__c.field-meta.xml
<CustomField>
    <fullName>SCC_NIK__c</fullName>
    <label>NIK</label>
    <length>16</length>
    <type>Text</type>
</CustomField>