force-app/main/default/objects/Account/fields/SCC_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>SCC_Primary_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>