force-app/main/default/objects/Account/fields/SCC_TanggalLahir__c.field-meta.xml
<CustomField>
    <fullName>SCC_TanggalLahir__c</fullName>
    <description>It is used for customer age</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TanggalLahir</label>
    <length>50</length>
    <type>Text</type>
</CustomField>