force-app/main/default/objects/Account/fields/SCC_Tipe_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>SCC_Tipe_Nasabah__c</fullName>
    <description>Is the Customer Type (Indvidual/ Non-Individual).</description>
    <label>Tipe Nasabah</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individu</fullName>
            </value>
            <value>
                <fullName>Non-Individu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>