force-app/main/default/objects/Account/fields/SCC_X__c.field-meta.xml
<CustomField>
    <fullName>SCC_X__c</fullName>
    <label>X</label>
    <length>50</length>
    <type>Text</type>
</CustomField>