force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>CASE(TEXT(Account_Segment__c),&quot;E&quot;,&quot;E&quot;,&quot;I&quot;,&quot;I&quot;,&quot;&quot;,&quot;&quot;,&quot;E&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>