force-app/main/default/objects/Account/fields/SFAWT911_Requestor__c.field-meta.xml
<CustomField>
    <fullName>SFAWT911_Requestor__c</fullName>
    <label>SFAWT911 Requestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>