force-app/main/default/objects/Account/fields/SFAWT911_The_Insured__c.field-meta.xml
<CustomField>
    <fullName>SFAWT911_The_Insured__c</fullName>
    <label>SFAWT911 The Insured</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>