force-app/main/default/objects/Account/fields/SFAWT912_Requestor__c.field-meta.xml
<CustomField>
    <fullName>SFAWT912_Requestor__c</fullName>
    <label>SFAWT912 Requestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>