force-app/main/default/objects/Account/fields/SFAWT913__c.field-meta.xml
<CustomField>
    <fullName>SFAWT913__c</fullName>
    <label>SFAWT913</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>