force-app/main/default/objects/Account/fields/SFAWT914__c.field-meta.xml
<CustomField>
    <fullName>SFAWT914__c</fullName>
    <label>SFAWT914</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>