force-app/main/default/objects/Account/fields/Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Income__c</fullName>
    <label>Source of Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Hasil Usaha</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Gaji Bulanan</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Wirausaha</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Lainnya</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>