force-app/main/default/objects/Account/fields/SP_Rating__c.field-meta.xml
<CustomField>
    <fullName>SP_Rating__c</fullName>
    <label>Financial Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>