force-app/main/default/objects/Account/fields/Surat_Kuasa_Number__c.field-meta.xml
<CustomField>
    <fullName>Surat_Kuasa_Number__c</fullName>
    <label>Surat Kuasa Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>