force-app/main/default/objects/Account/fields/Surat_Kuasa_Number_Date__c.field-meta.xml
<CustomField>
    <fullName>Surat_Kuasa_Number_Date__c</fullName>
    <label>Surat Kuasa Number Date</label>
    <type>Date</type>
</CustomField>