force-app/main/default/objects/Account/fields/Surveyor_ID__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Surveyor ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>