force-app/main/default/objects/Account/fields/Taxation_ID__c.field-meta.xml
<CustomField>
    <fullName>Taxation_ID__c</fullName>
    <label>Taxation ID (NPWP)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>