force-app/main/default/objects/Account/fields/Total_OSP_Pefindo__c.field-meta.xml
<CustomField>
    <fullName>Total_OSP_Pefindo__c</fullName>
    <label>Total OSP Pefindo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>