force-app/main/default/objects/Account/fields/Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Type_Mapping__c</fullName>
    <formula>CASE(TEXT(Type), &quot;0&quot;, &quot;General&quot;, &quot;1&quot;, &quot;General&quot;,&quot;2&quot;, &quot;General&quot;,&quot;3&quot;, &quot;General&quot;,&quot;4&quot;, &quot;General&quot;,&quot;5&quot;, &quot;General&quot;,TEXT(Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Mapping</label>
    <type>Text</type>
</CustomField>