force-app/main/default/objects/Account/fields/Workshop_ID__c.field-meta.xml
<CustomField>
    <fullName>Workshop_ID__c</fullName>
    <externalId>true</externalId>
    <label>Workshop ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>