force-app/main/default/objects/Account/fields/Yearly_Income__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Income__c</fullName>
    <label>Yearly Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Rp20-100 Juta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Rp100-200 Juta</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>&gt; Rp200 Juta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>