force-app/main/default/objects/Account/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Zip Code</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Accounts (Zip)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>