force-app/main/default/objects/Account/fields/Zip_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Name__c</fullName>
    <formula>Zip__r.Zip_Code_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Name</label>
    <type>Text</type>
</CustomField>