force-app/main/default/objects/Account/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <description>Account Insurance</description>
    <label>Insurance</label>
-->
    <!---->
    <!---->
</RecordType>