force-app/main/default/objects/Account/recordTypes/Loss_Adjuster.recordType-meta.xml
<RecordType>
    <fullName>Loss_Adjuster</fullName>
    <active>true</active>
    <description>Account Loss Adjuster</description>
    <label>Loss Adjuster</label>
</RecordType>