force-app/main/default/objects/Account/recordTypes/Surveyor.recordType-meta.xml
<RecordType>
    <fullName>Surveyor</fullName>
    <active>true</active>
    <description>Account Surveyor</description>
    <label>Surveyor</label>
</RecordType>