force-app/main/default/objects/Account/recordTypes/Workshop.recordType-meta.xml
<RecordType>
    <fullName>Workshop</fullName>
    <active>true</active>
    <description>Bengkel / Supplier</description>
    <label>Workshop</label>
    <!---->
    <!---->
    <!---->
</RecordType>