force-app/main/default/objects/Account/validationRules/ACT001_Account_Number_8_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>ACT001_Account_Number_8_Characters</fullName>
    <active>false</active>
    <description>Account numbers must be exactly eight characters long when populated.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(AccountNumber)), 
  LEN( AccountNumber) != 8
)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account number must be 8 characters long [ACT001]</errorMessage>
</ValidationRule>