force-app/main/default/objects/Account/validationRules/Admin_Validation_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Validation_Phone</fullName>
    <active>false</active>
    <description>(ISCHANGED(Phone) &amp;&amp; $Profile.Name = &apos;System Administrator&apos;) || (ISCHANGED(Phone) &amp;&amp; $Profile.Name != &apos;System Administrator&apos;) &amp;&amp; !ISBLANK(TEXT(SCC_Jenis_Nasabah__c))</description>
    <errorConditionFormula>ISCHANGED(Phone) &amp;&amp; !ISBLANK(TEXT(SCC_Jenis_Nasabah__c))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Anda tidak boleh merubah nomor telepon</errorMessage>
</ValidationRule>