force-app/main/default/objects/Account/validationRules/Cancel_Reason_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Reason_Min_3_Character</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c  = TRUE,FALSE,AND( ISPICKVAL( Status__c , &quot;Canceled&quot;), OR(ISBLANK(Cancel_Reason__c), LEN(Cancel_Reason__c) &lt; 3 ) ))</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>