force-app/main/default/objects/Account/validationRules/Customer_Consent_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Consent_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE,FALSE,AND( ISPICKVAL( Lead_Progress__c , &quot;KYC&quot;), AND( ISPICKVAL(Customer_Consent__c, &quot;Setuju&quot;) = FALSE )))</errorConditionFormula>
    <errorMessage>Please check customer must agree with the consent</errorMessage>
</ValidationRule>