force-app/main/default/objects/Account/validationRules/DeletedxxLoan_Informations_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DeletedxxLoan_Informations_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE,FALSE,AND( ISPICKVAL( Lead_Progress__c , &quot;Customer Consent&quot;), AND(ISBLANK( First_Loan_Information__c ) = TRUE)))</errorConditionFormula>
    <errorMessage>Please complete loan information</errorMessage>
</ValidationRule>