force-app/main/default/objects/Account/validationRules/ID_Number_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Personal&quot;,
    ISBLANK(ID_Number__c)
)</errorConditionFormula>
    <errorDisplayField>ID_Number__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>