force-app/main/default/objects/Account/validationRules/ID_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Must_16_Digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Personal&quot;,
    NOT(ISBLANK(ID_Number__c)),
    NOT(REGEX(ID_Number__c, &quot;^[0-9]{16}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ID_Number__c</errorDisplayField>
    <errorMessage>Please input 16 digit number only.</errorMessage>
</ValidationRule>