force-app/main/default/objects/Account/validationRules/Lead_Name_Min_3_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Name_Min_3_Character</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE,FALSE,LEN( Name ) &lt; 3)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>